fix: align icons

--- a/packages/main/src/pages/static/about/About.module.css
+++ b/packages/main/src/pages/static/about/About.module.css
@@ -120,7 +120,7 @@
   margin-top: 2%;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
 }
 
 .counterWrapper{
